--- a/_posts/0000-01-02-DaveSaah.md
+++ b/_posts/0000-01-02-DaveSaah.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+> If you want to go fast, go alone; if you want to go far, go with people.
 Use the left arrow to go back!
